docs: Fix button text colour in React examples

--- a/docs/src/pages/tutorial/board.css
+++ b/docs/src/pages/tutorial/board.css
@@ -42,6 +42,7 @@
 .board button {
   display: block;
   border: 3px outset var(--theme-accent);
+  color: var(--theme-text);
   border-radius: 1em;
   margin: 0.5em 0;
   background: var(--theme-bg);
