--- a/docs/src/components/HeadCommon.astro
+++ b/docs/src/components/HeadCommon.astro
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href={Astro.resolve('../styles/index.css')} />
 
 <!-- Scrollable a11y code helper -->
-<script type="module" src="/make-scrollable-code-focusable.js"></script>
+<script src={Astro.resolve('./make-scrollable-code-focusable.ts')} hoist async></script>
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script>
