--- a/docs/src/components/HeadCommon.astro
+++ b/docs/src/components/HeadCommon.astro
@@ -2,9 +2,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href={new URL('favicon.svg', Astro.site).href} />
 
-<link rel="sitemap" href="/sitemap.xml" />
+<link rel="sitemap" href={new URL('sitemap.xml', Astro.site).href} />
 
 <!-- Global CSS -->
 <link rel="stylesheet" href={Astro.resolve('../styles/theme.css')} />
